--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^6.0.0",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.47.0"
+    "react-icons": "^4.3.1",
+    "sass": "^1.47.0",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
